removed config from surefire to fix sonar issue
Change-Id: I74418f61dc9c499d706fa06b43905fd9275c86f2
Signed-off-by: Tausif Khanooni (tk0051225) <tk0051225@techmahindra.com>